# Agentic-Kernel

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  README.md  app.py  chainlit.md  improvement_summary.md  llms.txt  main.py  mint.json  pyproject.toml  pytest.ini  refactoring_summary.md  requirements-dev.txt  requirements.txt  run_tests.sh  run_workflow_manager_tests.py  tasks.md  temp_execute_workflow.txt  test_chat_agent.py
.chainlit/: config.toml
.chainlit/public/assets/: index-DmVTlIAz.js  index.js
.cursor/memory_bank/: current_state.md
.cursor/rules/: README.md  README.mdc  agents.rules.mdc  development.rules.md  development.rules.mdc  git.rules.mdc  llm.rules.mdc  plugins.rules.mdc  security.rules.mdc  structure.rules.mdc  style.rules.mdc  testing.rules.mdc
.github/workflows/: codeql.yml  python-publish.yml
.venv_new/: pyvenv.cfg
.venv_test/: pyvenv.cfg
docs/: README.md  tasks.md
docs/agentic-kernel/: architecture.md  concepts.md  introduction.md
docs/agentic-kernel/guides/: advanced.md  agent-communication.md  memory.md  orchestrator.md  plugins.md  usage-guide.md
docs/examples/: advanced-plugin-usage.md  agent-communication.md  memory-system-usage.md  orchestrator-conditional-steps.md  orchestrator-dynamic-planning.md  orchestrator-error-recovery.md  workflow-optimization-usage.md
docs/guides/: getting-started.md
docs/shared/: kernel-vs-fleet.md
docs/source/: conf.py
docs/source/api/: agentic_kernel.a2a.rst  agentic_kernel.adk_chat.rst  agentic_kernel.communication.rst
examples/: a2a_example.py  adk_multi_agent_example.py  dynamic_discovery_example.py
examples/adk_a2a_chat/: .env.example  README.md  __init__.py  main.py  requirements.txt
examples/adk_a2a_chat/agents/: __init__.py  creative.py  orchestrator.py  reasoning.py  research.py
examples/adk_a2a_chat/client/: __init__.py  chat_client.py
examples/adk_a2a_chat/server/: __init__.py  chat_server.py
examples/adk_a2a_chat/ui/: __init__.py  mesop_ui.py
examples/adk_a2a_chat/utils/: __init__.py  adk_a2a_utils.py
examples/adk_multi_agent/: __init__.py  main.py
examples/adk_multi_agent/agents/: task_manager.py  validator.py  worker.py
examples/adk_multi_agent/tests/: conftest.py  test_base_agent.py  test_main.py  test_task_manager.py  test_validator.py  test_worker.py
examples/adk_multi_agent/utils/: base_agent.py
examples/chainlit_app/: app.py
examples/chainlit_app/src/agentic_kernel_demo/: app.py
examples/cli_workflow/src/agentic_kernel_cli/: main.py
examples/memory_system_app/: README.md  example.py
examples/multi_agent_workflow/: file_analysis_processing.py  requirements.txt  utils.py  web_research_code_generation.py
scripts/: fix_imports.py  run_test.py  run_tests.py  test_imports.py
src/: __init__.py
src/agentic_kernel/: __init__.py  app.py  config.py  exceptions.py  ledgers.py  memory_mesop_app.py  mesop_app.py  orchestrator.py  task_decomposition.py  task_decomposition_strategies.py  task_manager.py  types.py
src/agentic_kernel/a2a/: __init__.py  client.py  models.py  server.py
src/agentic_kernel/adk_chat/: README.md  __init__.py  main.py
src/agentic_kernel/adk_chat/agents/: __init__.py  creative.py  orchestrator.py  reasoning.py  research.py
src/agentic_kernel/adk_chat/client/: __init__.py  chat_client.py
src/agentic_kernel/agents/: __init__.py  base.py  chat_agent.py  coder_agent.py  file_surfer_agent.py  memory_agent.py  orchestrator_agent.py  role_manager.py  terminal_agent.py  web_surfer_agent.py
src/agentic_kernel/communication/: __init__.py  capability_registry.py  collaborative_protocol.py  conflict.py  consensus.py  coordination.py  dynamic_capability_registry.py  error_handler.py  feedback.py  message.py  protocol.py  trust.py
src/agentic_kernel/config/: __init__.py  agent_team.py  default_config.json  llm_config.json  loader.py
src/agentic_kernel/ledgers/: base.py  task_ledger.py
src/agentic_kernel/memory/: collaborative.py  persistence.py  vector_store.py
src/agentic_kernel/orchestration/: base.py
src/agentic_kernel/orchestrator/: README.md  __init__.py  agent_manager.py  agent_metrics.py  agent_selection.py  condition_evaluator.py  core.py  metrics_manager.py  workflow_executor.py  workflow_history.py  workflow_manager.py  workflow_optimizer.py  workflow_planner.py
src/agentic_kernel/plugins/: base.py  registry.py
src/agentic_kernel/tools/: example_tools.py  tool_interface.py
src/agentic_kernel/utils/: agent_interaction_logger.py  logging.py
src/agenticfleet/: app.py
src/agenticfleet/agents/: base.py
src/agenticfleet/config/: __init__.py  llm_config.json  loader.py
src/debug/: __init__.py  debug_app.py  simple_debug.py  test_a2a_compliance.py  test_a2a_plugin_system.py
tests/: README_mock_agent.md  __init__.py  conftest.py  mock_agent.py  test_agent_integration.py  test_agent_selection.py  test_app.py  test_chainlit_debug.py  test_chat_handlers.py  test_coder_agent.py  test_communication.py  test_complex_agent_workflows.py  test_condition_evaluator.py  test_config_agent_team.py  test_core_components.py  test_database.py  test_file_surfer_agent.py  test_ledgers.py  test_mcp.py  test_memory.py  test_memory_persistence.py  test_mock_agent.py  test_orchestrator.py  test_orchestrator_agent.py  test_orchestrator_workflow.py  test_task_decomposition.py  test_task_manager.py  test_tasklist_integration.py  test_tasklist_sync.py  test_team_config_integration.py  test_terminal_agent.py  test_terminal_sandbox.py  test_types.py  test_vector_search.py  test_web_surfer_agent.py  test_workflow_history.py  test_workflow_manager.py  test_workflow_optimizer.py
tests/agents/: test_base.py  test_chat_agent.py  test_file_surfer_agent.py  test_web_surfer_agent.py
tests/mocks/: __init__.py  chainlit.py
tests/plugins/: __init__.py  test_file_surfer.py  test_weather_plugin.py  test_web_surfer.py
tests/plugins/azure_ai_search/: test_azure_ai_search_plugin.py  test_direct_import.py
tests/utils/: test_logging.py
tests/workflows/: test_end_to_end_workflow.py
(+26 files in other folders)
